--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <string name="your_email">Your email</string>
     <string name="password">Password</string>
     <string name="login">LOGIN</string>
-    <string name="forgot_password">Forgot password</string>
+    <string name="forgot_password">Forgot password?</string>
     <string name="register">Register</string>
+    <string name="registration">Registration</string>
+    <string name="email_reg">Email</string>
+    <string name="password_reg">Password</string>
+    <string name="name_reg">Name</string>
+    <string name="last_name_reg">Last name</string>
+    <string name="age_reg">How old are you?</string>
+    <string name="sign_up_reg">SIGN UP</string>
+    <string name="reset_password">RESET PASSWORD</string>
 </resources>
