--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="age_reg">How old are you?</string>
     <string name="sign_up_reg">SIGN UP</string>
     <string name="reset_password">RESET PASSWORD</string>
+    <string name="logout">Logout</string>
+    <string name="write_in_all_fields">Write in all fields</string>
+    <string name="write_email_field">Write email field</string>
 </resources>
