--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="logout">Logout</string>
     <string name="write_in_all_fields">Write in all fields</string>
     <string name="write_email_field">Write email field</string>
+    <string name="type_your_message">Type your message</string>
 </resources>
